--- a/rank42/templates/main_index.html
+++ b/rank42/templates/main_index.html
@@ -1,7 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% for ft_user in ft_users %}
-        <p>{{ ft_user.tier_rank }} - {{ ft_user.tier_name }}</p>
-    {% endfor %}
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">순위</th>
+                <th scope="col">랭크</th>
+                <th scope="col">이름</th>
+                <th scope="col">점수</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for ft_user in ft_users %}
+                <tr>
+                    <th scope="row">{{ ft_user.tier_rank }}</th>
+                    <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier_name }}</td>
+                    <td>{{ ft_user.login }}</td>
+                    <td>{{ ft_user.coalition_point }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
