--- a/rank42/templates/main_index.html
+++ b/rank42/templates/main_index.html
@@ -15,7 +15,15 @@
                 <tr>
                     <th scope="row">{{ ft_user.tier_rank }}</th>
                     <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier_name }}</td>
-                    <td>{{ ft_user.login }}</td>
+                    <td>{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></td>
+                    <td>{{ ft_user.coalition_point }}</td>
+                </tr>
+            {% endfor %}
+            {% for ft_user in unrank_ft_users %}
+                <tr>
+                    <th scope="row">{{ ft_user.tier_rank }}</th>
+                    <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier_name }}</td>
+                    <td>{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></td>
                     <td>{{ ft_user.coalition_point }}</td>
                 </tr>
             {% endfor %}
