MoveCoalitionPoint 기능 완성

--- a/rank42/templates/manage_page.html
+++ b/rank42/templates/manage_page.html
@@ -21,5 +21,11 @@
             <button type="submit" class="btn btn-primary">FtUser 만들기</button>
         </form>
     </div>
+    <div class="row">
+        <form action="{% url 'move_coalition_point' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary">Tier 만들기(migration)</button>
+        </form>
+    </div>
 </section>
 {% endblock %}
