--- a/rank42/templates/list.html
+++ b/rank42/templates/list.html
@@ -11,11 +11,11 @@
             </tr>
         </thead>
         <tbody>
-            {% for ft_user in ft_users %}
+            {% for ft_user in ft_users %}s
                 <tr>
                     <th scope="row">{{ ft_user.tier.tier_rank }}</th>
                     <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier.tier_name }}</td>
-                    <td>{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></td>
+                    <td><a href="{% url 'search' login=ft_user.login %}">{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></a></td>
                     <td>{{ ft_user.coalition_point }}</td>
                 </tr>
             {% endfor %}
@@ -23,7 +23,7 @@
                 <tr>
                     <th scope="row">{{ ft_user.tier_rank }}</th>
                     <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier_name }}</td>
-                    <td>{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></td>
+                    <td><a href="{% url 'search' login=ft_user.login %}">{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></a></td>
                     <td>{{ ft_user.coalition_point }}</td>
                 </tr>
             {% endfor %}
