main 파트까지 작업완료

--- a/rank42/templates/list.html
+++ b/rank42/templates/list.html
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for ft_user in ft_users %}s
+            {% for ft_user in ft_users %}
                 <tr>
                     <th scope="row">{{ ft_user.tier.tier_rank }}</th>
                     <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier.tier_name }}</td>
