--- a/rank42/templates/base.html
+++ b/rank42/templates/base.html
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'list' %}">전체 랭킹</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'piscine_list' %}">피신 랭킹</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -39,7 +42,7 @@
         </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
-                <a class="navbar-brand" href="https://github.com/progresshans/rank42"><i class="fab fa-github"></i> Rank42에 기여해보세요!</a>
+                <a class="navbar-brand" href="{# https://github.com/progresshans/rank42 #}"><i class="fab fa-github"></i> Rank42에 기여해보세요!</a>
             </nav>
         </footer>
     </body>
