--- a/rank42/templates/main/list.html
+++ b/rank42/templates/main/list.html
@@ -16,7 +16,7 @@
                     <th scope="row">{{ ft_user.tier.tier_rank }}</th>
                     <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier.tier_name }}</td>
                     <td><a href="{% url 'search' login=ft_user.login %}">{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></a></td>
-                    <td>{{ ft_user.coalition_point }}</td>
+                    <td>{{ ft_user.tier.coalition_point }}</td>
                 </tr>
             {% endfor %}
             {% for ft_user in unrank_ft_users %}
@@ -24,7 +24,7 @@
                     <th scope="row">{{ ft_user.tier_rank }}</th>
                     <td><img src="{{ ft_user.tier_img }}" class="rounded" style="max-width: 40px; height: auto;"> {{ ft_user.tier_name }}</td>
                     <td><a href="{% url 'search' login=ft_user.login %}">{{ ft_user.login }} <span style="background-color:{{ ft_user.coalition.color }}; color:white;">{{ ft_user.coalition.name }}</span></a></td>
-                    <td>{{ ft_user.coalition_point }}</td>
+                    <td>{{ ft_user.tier.coalition_point }}</td>
                 </tr>
             {% endfor %}
         </tbody>
