--- a/rank42/templates/base.html
+++ b/rank42/templates/base.html
@@ -42,7 +42,7 @@
         </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
-                <a class="navbar-brand" href="{# https://github.com/progresshans/rank42 #}"><i class="fab fa-github"></i> Rank42에 기여해보세요!</a>
+                <a class="navbar-brand" href="https://github.com/progresshans/rank42"><i class="fab fa-github"></i> Rank42에 기여해보세요!</a>
             </nav>
         </footer>
     </body>
