--- a/rank42/templates/account/sign_in.html
+++ b/rank42/templates/account/sign_in.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <p>{{ error }}</p>
+    <a href="{{ ft_api_sign_in_url }}">
+        <button type="button" class="btn btn-primary btn-lg">로그인 하기</button>
+    </a>
 {% endblock %}
