불합격 컬러 빨간색으로 추가

--- a/rank42/templates/piscine/piscine_list.html
+++ b/rank42/templates/piscine/piscine_list.html
@@ -22,7 +22,7 @@
                     {% if piscine_ft_user.is_pass == True %}
                         <td style="color: blue">합</td>
                     {% else %}
-                        <td style="color: blue">불</td>
+                        <td style="color: red">불</td>
                     {% endif %}
                 </tr>
             {% endfor %}
