--- a/rank42/templates/club/club_add.html
+++ b/rank42/templates/club/club_add.html
@@ -1,30 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class="container">
-    <div class="row">
-    	<article class="page col-12 col-md-12 col-lg-10">
-            <section class="article-container">
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <div class="form-group my-3 position-relative">
-                        {{form.name}}
-                        <label class="form-placeholder" for="{{form.name.id_for_label}}">{{form.name.label}}</label>
-                    </div>
-                    <div class="form-group mt-5 position-relative">
-                        {{form.content}}
-                        <label class="form-placeholder" for="{{form.content.id_for_label}}">{{form.content.label}}</label>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        {{form.can_join}}
-                        <label class="custom-control-label" for="{{form.can_join.id_for_label}}">{{form.can_join.label}}</label>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <input class="btn" type="submit" value="등록하기">
-                    </div>
-                </form>
-            </section>
-        </article>
-    </div>
-</section>
+    <section class="container">
+        <div class="row">
+            <article class="page col-12 col-md-12 col-lg-10">
+                <section class="article-container">
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon3">{{ form.name.label }}</span>
+                            </div>
+                            {{ form.name }}
+                        </div>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">{{ form.content.label }}</span>
+                            </div>
+                            {{ form.content }}
+                        </div>
+                        <div class="form-check">
+                            {{ form.can_join }}
+                            <label class="form-check-label" for="{{ form.can_join.id_for_label }}">
+                                {{ form.can_join.label }}
+                            </label>
+                        </div>
+                        <input class="btn btn-primary" type="submit" value="등록하기">
+                    </form>
+                </section>
+            </article>
+        </div>
+    </section>
 {% endblock %}
