--- a/rank42/templates/club/club_list.html
+++ b/rank42/templates/club/club_list.html
@@ -2,17 +2,20 @@
 
 {% block content %}
     <div class="row">
+        <a href="#" class="btn btn-primary btn-lg btn-block">소모임 만들기</a>
+        <a href="#" class="btn btn-secondary btn-lg btn-block">가입한 소모임</a>
         {% if not clubs %}
             <h1>소모임이 존재하지 않습니다. 소모임을 만들어보세요</h1>
         {% else %}
             {% for club in clubs %}
-                <div class="col-12">
+                <div class="col-12 mt-3">
                     <div class="card">
                         <h5 class="card-header">{{ club.name }}</h5>
                         <div class="card-body">
                             <p class="card-text">{{ club.content }}</p>
-                            <a href="#" class="btn btn-primary">자세히 보기</a>
-                            <a href="#" class="btn btn-primary">가입 하기</a>
+                            <a href="{{ club.get_absolute_url }}" class="btn btn-primary">자세히 보기</a>
+                            <a href="#" class="btn btn-danger">가입하기</a>
+                            <a href="#" class="btn btn-warning">관리하기</a>
                         </div>
                     </div>
                 </div>
