--- a/rank42/templates/club/club_list.html
+++ b/rank42/templates/club/club_list.html
@@ -15,7 +15,7 @@
                             <p class="card-text">{{ club.content }}</p>
                             <a href="{{ club.get_absolute_url }}" class="btn btn-primary">자세히 보기</a>
                             <a href="{{ club.get_absolute_url }}join/" class="btn btn-danger">가입하기</a>
-                            <a href="#" class="btn btn-warning">관리하기</a>
+                            <a href="{{ club.get_absolute_url }}manage/" class="btn btn-warning">관리하기</a>
                         </div>
                     </div>
                 </div>
