--- a/rank42/templates/base.html
+++ b/rank42/templates/base.html
@@ -35,9 +35,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'list' %}">전체 랭킹</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'piscine_list' %}">피신 랭킹</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{% url 'piscine_list' %}">피신 랭킹</a>#}
+{#                </li>#}
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'club_list' %}">소모임</a>
