--- a/rank42/templates/piscine/piscine_index.html
+++ b/rank42/templates/piscine/piscine_index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="row h-100">
+    <div class="row">
         <div class="col-12 my-auto">
             <br>
             <br>
