--- a/rank42/templates/piscine/piscine_list.html
+++ b/rank42/templates/piscine/piscine_list.html
@@ -5,11 +5,16 @@
         <p>2기 1차 피신 정보</p>
         마지막 업데이트 : {{ piscine_ft_users.first.updated_at|date:"Y-m-d H:i:s" }}
     </div>
-    {% if sort_value == '레벨' %}
-        <a href="{% url "piscine_list" %}" class="btn btn-primary btn-lg btn-block">피어 평가 횟수로 보기</a>
-    {% else %}
-        <a href="{% url "piscine_list" %}?value=level" class="btn btn-primary btn-lg btn-block">레벨 기준으로 보기</a>
-    {% endif %}
+    <a href="{% url "piscine_list" %}?pool_year=2020&pool_month=february" class="btn btn-primary btn-lg btn-block">1기 1차</a>
+    <a href="{% url "piscine_list" %}?pool_year=2020&pool_month=june" class="btn btn-primary btn-lg btn-block">1기 2차</a>
+    <a href="{% url "piscine_list" %}?pool_year=2020&pool_month=july" class="btn btn-primary btn-lg btn-block">2기 1차</a>
+    <a href="{% url "piscine_list" %}?pool_year=2020&pool_month=august" class="btn btn-primary btn-lg btn-block">2기 2차</a>
+
+{#    {% if sort_value == '레벨' %}#}
+{#        <a href="{% url "piscine_list" %}" class="btn btn-primary btn-lg btn-block">피어 평가 횟수로 보기</a>#}
+{#    {% else %}#}
+{#        <a href="{% url "piscine_list" %}?value=level" class="btn btn-primary btn-lg btn-block">레벨 기준으로 보기</a>#}
+{#    {% endif %}#}
     <table class="table mt-3">
         <thead class="thead-dark">
             <tr>
