piscine 정보 이름이 다르게 표시되던 문제 수정

--- a/rank42/templates/piscine/piscine_list.html
+++ b/rank42/templates/piscine/piscine_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="alert alert-secondary" role="alert">
-        <p>2기 1차 피신 정보</p>
+        <p>{{ piscine_name }} 피신 정보</p>
         마지막 업데이트 : {{ piscine_ft_users.first.updated_at|date:"Y-m-d H:i:s" }}
     </div>
     <a href="{% url "piscine_list" %}?pool_year=2020&pool_month=february" class="btn btn-primary btn-lg btn-block">1기 1차</a>
