--- a/rank42/templates/base.html
+++ b/rank42/templates/base.html
@@ -20,12 +20,12 @@
     <!-- FontAwesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
 
-    <title>Rank42</title>
+    <title>Portal42</title>
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'main' %}">Rank42</a>
+        <a class="navbar-brand" href="{% url 'main' %}">Portal42</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'piscine_index' %}">피신 랭킹</a>
-                </li>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'club_list' %}">소모임</a>
