--- a/rank42/templates/main/main.html
+++ b/rank42/templates/main/main.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row h-100">
         <div class="col-12 my-auto">
-            <p class="display-1">Rank42</p>
+            <p class="display-1">Portal42</p>
             <form action="">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" name="login" placeholder="인트라 아이디를 입력하세요" aria-label="인트라 아이디를 입력하세요" aria-describedby="button-addon2">
