--- a/rank42/templates/base.html
+++ b/rank42/templates/base.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="{% url 'piscine_index' %}">피신 랭킹</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'club_list' %}">소모임</a>
+                    <a class="nav-link" href="{% url 'club_list' %}">동아리</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-lg-auto">
