--- a/seoul42/templates/toy/write_report.html
+++ b/seoul42/templates/toy/write_report.html
@@ -5,8 +5,18 @@
         <div class="row">
             <form action="" method="POST">
                 {% csrf_token %}
+                <h2>작성을 원하는 요일을 선택하세요</h2>
+                <input type="checkbox" name="weekday_select" value="0" checked="checked">월
+                <input type="checkbox" name="weekday_select" value="1" checked="checked">화
+                <input type="checkbox" name="weekday_select" value="2" checked="checked">수
+                <input type="checkbox" name="weekday_select" value="3" checked="checked">목
+                <input type="checkbox" name="weekday_select" value="4" checked="checked">금
+                <input type="checkbox" name="weekday_select" value="5">토
+                <input type="checkbox" name="weekday_select" value="6">일
+                <br>
+
                 <input type="text" name="user_name" placeholder="아이디">
-                <input type="text" name="password" placeholder="비밀번호">
+                <input type="password" name="password" placeholder="비밀번호">
                 <button type="submit" class="btn btn-primary">보고서 작성</button>
             </form>
         </div>
